--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "com.kunagisatomo.unitygameframework",
+  "name": "com.kunagisatomo.gameframework",
   "displayName": "Game Framework",
   "description": "Simple Game Framework",
-  "version": "3.0.2",
+  "version": "3.0.3",
   "author": {
-    "name": "零",
+    "name": "\u96f6",
     "email": "kunagisatomo@live.com"
   }
 }
